// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigatorContainer correctly hides bottom action bar 1`] = `
Array [
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />,
  <NavigationContainer
    navigation={
      Object {
        "addListener": [Function],
        "dispatch": [MockFunction],
        "getParam": [Function],
        "goBack": [Function],
        "navigate": [Function],
        "pop": [Function],
        "popToTop": [Function],
        "push": [Function],
        "replace": [Function],
        "setParams": [Function],
        "state": Object {
          "index": 0,
          "navigate": [MockFunction],
          "routes": Array [
            Object {
              "routeName": "Landing",
            },
          ],
        },
      }
    }
  />,
  "",
  "",
]
`;

exports[`NavigatorContainer mounts correctly and matches snapshot 1`] = `
Array [
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />,
  <NavigationContainer
    navigation={
      Object {
        "addListener": [Function],
        "dispatch": [MockFunction],
        "getParam": [Function],
        "goBack": [Function],
        "navigate": [Function],
        "pop": [Function],
        "popToTop": [Function],
        "push": [Function],
        "replace": [Function],
        "setParams": [Function],
        "state": Object {
          "index": 0,
          "navigate": [MockFunction],
          "routes": Array [
            Object {
              "routeName": "Home",
            },
          ],
        },
      }
    }
  />,
  "",
  <BottomActionBar
    openScanner={[MockFunction]}
  />,
]
`;
